# team-flow-auth-service

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
src/: manage.py
src/accounts/: apps.py  manager.py  managers.py  models.py  producer.py  signals.py  urls.py
src/accounts/migrations/: 0001_initial.py  0002_alter_user_uuid.py  0002_user_is_email_verified.py
src/accounts/serializers/: auth_serializers.py  user_serializers.py
src/accounts/tests/: test_models.py  test_serializers.py  test_views.py
src/accounts/utils/: jwt_utils.py
src/accounts/views/: auth_views.py
src/project/: urls.py
src/project/settings/: __init__.py  base.py  rest_framework.py
src/user_api/: apps.py  urls.py  views.py
src/user_api/serializers/: user_serializers.py
src/user_api/tests/: test_views.py
