[tool.poetry]
name = "team-flow-auth-service"
version = "0.1.0"
description = ""
authors = ["Ahmed Symum Swapno <ahmed.symum.swapno@g.bracu.ac.bd>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-split-settings = "^1.3.1"
django-cors-headers = "^4.3.1"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
